# SpaghettiKart

./: .clang-tidy  ActorSpawnDataFactory_8cpp.html  ActorSpawnDataFactory_8cpp__incl.map  ActorSpawnDataFactory_8cpp__incl.md5  ActorSpawnDataFactory_8h.html  ActorSpawnDataFactory_8h.js  ActorSpawnDataFactory_8h__dep__incl.map  ActorSpawnDataFactory_8h__dep__incl.md5  ActorSpawnDataFactory_8h__incl.map  ActorSpawnDataFactory_8h__incl.md5  ActorSpawnDataFactory_8h_source.html  Actor_8cpp.html  Actor_8cpp__incl.map  Actor_8cpp__incl.md5  Actor_8h.html  Actor_8h.js  Actor_8h__dep__incl.map  Actor_8h__dep__incl.md5  Actor_8h__incl.map  Actor_8h__incl.md5  Actor_8h_source.html  AllActors_8h.html  AllActors_8h__dep__incl.map  AllActors_8h__dep__incl.md5  AllActors_8h__incl.map  AllActors_8h__incl.md5  AllActors_8h_source.html  AllTracks_8h.html  AllTracks_8h__dep__incl.map  AllTracks_8h__dep__incl.md5  AllTracks_8h__incl.map  AllTracks_8h__incl.md5  AllTracks_8h_source.html  Animation_8cpp.html  Animation_8cpp__incl.map  Animation_8cpp__incl.md5  Animation_8h.html  Animation_8h.js  Animation_8h__dep__incl.map  Animation_8h__dep__incl.md5  (+18890 more)
.github/workflows/: main.yml  windows-compile.yml
cmake/: automate-vcpkg.cmake
courses/: all_course_packed.h
courses/test_track/: data.c  model.c  vtx.c
docs/: actorsmenu.md  coursesmenu.md  custom-track.md  sequences-information.md  track_returns.md
docs/basics/: controlflow.md
docs/tutorials/: boostramps.md  paths.md
include/: actor_types.h  common_structs.h  defines.h  mk64.h  objects.h  save_data.h
search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  (+180 more)
src/: camera.c  code_800029B0.c  code_800029B0.h  code_80005FD0.c  code_80005FD0.h  code_8003DC40.c  code_80057C60.c  code_80057C60.h  code_8006E9C0.c  code_80086E70.c  effects.c  effects.h  kart_dma.c  main.c  main.h  menu_items.c  menu_items.h  menus.c  menus.h  player_controller.c  player_controller.h  render_objects.c  render_player.c  replays.c  save.c  spawn_players.c  update_objects.c  update_objects.h
src/actors/banana/: render.inc.c  update.inc.c
src/actors/blue_and_red_shells/: update.inc.c
src/actors/fake_item_box/: render.inc.c  update.inc.c
src/actors/falling_rock/: update.inc.c
src/actors/green_shell/: update.inc.c
src/actors/trees/: render.inc.c
src/audio/: external.c  external.h  synthesis.c
src/data/: path_spawn_metadata.h  textures.c
src/debug/: all_variables.h
src/ending/: ceremony_and_credits.c  ceremony_and_credits.h  code_80280000.c  code_80281780.c  code_80281780.h  code_80281C40.c
src/engine/: CoreMath.h  Cup.cpp  Cup.h  GameAPI.h  GarbageCollector.cpp  RaceManager.cpp  RaceManager.h  RandomItemTable.cpp  RandomItemTable.h  TrackBrowser.cpp  World.cpp  World.h
src/engine/actors/: Cloud.h  FallingRock.cpp  FallingRock.h  Finishline.cpp  Finishline.h  MarioSign.cpp  MarioSign.h  Ship.h  SpaghettiShip.h  Starship.h  Text.cpp  Text.h  WarioSign.cpp  WarioSign.h
src/engine/cameras/: TourCamera.cpp
src/engine/courses/: MooMooFarm.cpp  RainbowRoad.cpp
src/engine/editor/: Editor.cpp  Editor.h  EditorMath.cpp  EditorMath.h  GameObject.h  Gizmo.cpp  Light.cpp  ObjectPicker.cpp  SceneManager.cpp  SceneManager.h
src/engine/mods/: ModManager.cpp
src/engine/objects/: Bat.h  BombKart.cpp  BombKart.h  Boos.h  ChainChomp.cpp  CheepCheep.h  Crab.h  Flagpole.cpp  Flagpole.h  GrandPrixBalloons.h  Hedgehog.h  HotAirBalloon.h  Lakitu.cpp  Lakitu.h  Mole.cpp  Mole.h  MoleGroup.cpp  MoleGroup.h  Penguin.h  Podium.h  Seagull.cpp  Seagull.h  Snowman.h  Thwomp.cpp  Thwomp.h  TrashBin.h  Trophy.cpp  Trophy.h
src/engine/registry/: DataRegistry.h  RegisterActors.cpp  RegisterContent.h  RegisterItemTables.cpp  RegisterItems.cpp  RegisterTracks.cpp  Registry.h
src/engine/tracks/: BansheeBoardwalk.cpp  BansheeBoardwalk.h  BigDonut.cpp  BigDonut.h  BlockFort.cpp  BlockFort.h  BowsersCastle.cpp  BowsersCastle.h  ChocoMountain.cpp  ChocoMountain.h  DKJungle.cpp  DKJungle.h  DoubleDeck.cpp  DoubleDeck.h  FrappeSnowland.cpp  FrappeSnowland.h  Harbour.cpp  Harbour.h  KalimariDesert.cpp  KalimariDesert.h  KoopaTroopaBeach.cpp  KoopaTroopaBeach.h  LuigiRaceway.cpp  LuigiRaceway.h  MarioRaceway.cpp  MarioRaceway.h  MooMooFarm.cpp  MooMooFarm.h  PodiumCeremony.cpp  PodiumCeremony.h  RainbowRoad.cpp  RainbowRoad.h  RoyalRaceway.cpp  RoyalRaceway.h  SherbetLand.cpp  SherbetLand.h  Skyscraper.cpp  Skyscraper.h  TestTrack.cpp  TestTrack.h  (+8 more)
src/engine/vehicles/: Boat.cpp  Boat.h  Bus.cpp  Bus.h  Car.cpp  Car.h  TankerTruck.cpp  TankerTruck.h  Train.cpp  Train.h  Truck.cpp  Truck.h
src/enhancements/freecam/: freecam.cpp
src/port/: Engine.cpp  Engine.h  GBIMiddleware.cpp  Game.cpp  Game.h  GameExtractor.cpp  GameExtractor.h  SpaghettiGui.cpp  SpaghettiGui.h  Variables.cpp
src/port/interpolation/: FrameInterpolation.cpp  FrameInterpolation.h
src/port/resource/importers/: ActorSpawnDataFactory.h  ArrayFactory.cpp  ArrayFactory.h  AudioBankFactory.cpp  AudioBankFactory.h  AudioSampleFactory.h  AudioSequenceFactory.h  BetterTextureFactory.cpp  BetterTextureFactory.h  CPUFactory.h  CourseVtxFactory.h  GenericArrayFactory.h  MinimapFactory.h  ResourceUtil.h  TrackPathPointFactory.h  TrackSectionsFactory.cpp  (+4 more)
src/port/ui/: ContentBrowser.cpp  ContentBrowser.h  FreecamWindow.cpp  ImguiUI.cpp  Menu.cpp  PortMenu.cpp  PortMenu.h  Properties.cpp  ResolutionEditor.cpp  ResolutionEditor.h  SceneExplorer.cpp  Tools.cpp  TrackProperties.cpp
src/racing/: actors.c  actors.h  actors_extended.c  collision.c  math_util.c  math_util.h  memory.c  memory.h  race_logic.c  render_courses.c  render_courses.h  skybox_and_splitscreen.c  skybox_and_splitscreen.h
(+25 files in other folders)
